feat: filter clients by profile
